--- a/src/Buseta/TallerBundle/Resources/config/services.yml
+++ b/src/Buseta/TallerBundle/Resources/config/services.yml
@@ -111,6 +111,6 @@ services:
      #Form Type
     taller.orden_trabajo.type:
         class: Buseta\TallerBundle\Form\Type\OrdenTrabajoType
-        arguments: [@security.context]
+        arguments: [@security.token_storage]
         tags:
             - {name: form.type, alias: 'buseta_tallerbundle_ordentrabajo'}
