--- a/src/Buseta/BodegaBundle/Resources/config/routing.yml
+++ b/src/Buseta/BodegaBundle/Resources/config/routing.yml
@@ -51,15 +51,15 @@ BusetaBodegaBundle_precioproducto:
 #    prefix:   /albaranlinea
 
 bodega_principal:
-  pattern:  /modulo/bodega
+  path:  /modulo/bodega
   defaults: { _controller: "BusetaBodegaBundle:Bodega:principal" }
 
 bodega_informe_stock:
-  pattern:  /modulo/bodega/informe_stock
+  path:  /modulo/bodega/informe_stock
   defaults: { _controller: "BusetaBodegaBundle:InformeStock:index" }
 
 bodega_informe_costos:
-  pattern:  /modulo/bodega/informe_costos
+  path:  /modulo/bodega/informe_costos
   defaults: { _controller: "BusetaBodegaBundle:Informe:informeCostos" }
 
 buseta_bodega_terceros:
