[Update] Adicionando configuraciones para entorno test.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,3 +14,7 @@ parameters:
 
     # Easy Admin Nomenclators CSS Assets
     nomenclator.assets.css: 'bundles/busetanomenclador/css/admin.css'
+
+
+###Base Datos Testing
+    testing_database_name: buses.taller.test
