--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -47,6 +47,6 @@ easy_admin_bundle:
 fos_js_routing:
     resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
 
-buseta_notificaciones:
-    resource: "@BusetaNotificacionesBundle/Resources/config/routing.yml"
+hatuey_soft_notificaciones:
+    resource: "@HatueySoftNotificacionesBundle/Resources/config/routing.yml"
     prefix:   /notificaciones
