--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "javiereguiluz/easyadmin-bundle": "~1.0@dev",
         "knplabs/knp-menu-bundle": "~2.0",
         "tecnickcom/tcpdf": "~6.0",
-        "apy/breadcrumbtrail-bundle": "^1.3"
+        "apy/breadcrumbtrail-bundle": "^1.3",
+        "doctrine/doctrine-migrations-bundle": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.7",
